GNOME Bugzilla – Bug 750491
KP_Delete does not delete
Last modified: 2017-08-28 11:05:28 UTC
It seems the numpad's [. Delete] key does not work for deleting files like the regular [Delete] would. [the regular one is unfortunately broken on my keyboard, so I can't 'just use that' until I get a new one ebay'd] nautilus 3.16-git
Created attachment 357932 [details] [review] files-view: Allow numpad Delete to send items to trash I'm not sure if <Shift>KP_Delete for permanent deletion is also needed. Shift is usually closer to regular Delete.
hmm I'd say yes, because: 0) consistency; 1) not everyone uses a full-size PC keyboard, and laptops have varied layouts; 2) not everyone tries to press such shortcuts with one hand
Created attachment 358012 [details] [review] files-view: Allow numpad Delete to send items to trash But of course. I don't know what I was thinking. New patch adds <shift>KP_Delete but also extends KP_Delete to remove files from Trash and adapts comment.
Review of attachment 358012 [details] [review]: Loosk good thanks!
Attachment 358012 [details] pushed as 790c367 - files-view: Allow numpad Delete to send items to trash