files-view: Allow numpad Delete to send items to trash

The Delete key is the keyboard accelerator to send items to Trash (or delete
permanently when Trash is not available). The numpad Delete key is unused.

So, let the numpad Delete key act as accelerator for the same actions. Also,
for consistency, allow it to combo with <shift> for deleting permanently.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=750491